--- a/topo/topo2.html
+++ b/topo/topo2.html
@@ -149,10 +149,289 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-<p></p>
-
+$
+\newcommand{\contra}{\Rightarrow\Leftarrow}
+\newcommand{\bc}{\because}
+\newcommand{\tf}{\therefore}
+$
 <h1><a
 name="Connected">Connected</a></h1>
+
+<p>
+<b>EXAMPLE (2022.16a):</b>&nbsp;
+$(X,\tau)$ is a topological space and $A\subseteq X,$
+and $C$ is a connected subset of $X$ that intersects
+both $A$ and $X \setminus A.$ Prove that $C$
+intersects boundary of $A.$[2]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+We know that $A^\circ, \partial A$  and $(A^c)^\circ$   form a partition of $X.$  
+<p></p>
+Let, if possible, $C\cap \partial A=\phi.$ 
+<p></p>
+ Then $C = U\cup V,$  where $U= C\cap A^\circ$  and
+ $V= C\cap (A^c)^\circ.$
+<p></p>
+In the subspace topology of $C$  both $U$  and $V$  are open. Also they are disjoint. So they are clopen in
+ $C.$  Thus, they provide a disconnection of $C (\contra\bc C$  is connected$).$
+</font></b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2022.16b):</b>&nbsp;
+$f:[0,1]\rightarrow[0,1]$ is a continuous function. Show that there
+exists $C\in[0,1]$ such that $f(C)=C,$
+where $[0,1]$ is endowed with the usual subspace topology.[3]
+<p></p>
+<b>SOLUTION:</b>Intermediate value theorem  লাগাও $f(x)-x$-এর উপর৷ ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2022.17):</b>&nbsp;
+Prove that the union of any family of connected sets, every pair
+of which has an element in common, is a connected set in any
+topological space. Is the intersection of two connected sets
+alaways connected? Justify.[3+2]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+<u>First part</u>: Let $\{C_ \alpha~:~\alpha\in \Lambda\}$  be a family of connected subsets in some topological space
+ $(X,\tau)$  such that $\forall \alpha,\beta\in \Lambda~~C_ \alpha\cap C_ \beta\neq\phi.$  
+<p></p>
+Let $C = \cup_{ \alpha\in \Lambda} C_ \alpha.$
+<p></p>
+Let, if possible, $C$  be not connected. Let $C = D\cup E $ be a disconnection. 
+<p></p>
+Then $\forall \alpha\in \Lambda~~(C_ \alpha\subseteq D\mbox{ or } C_ \alpha\subseteq E).$
+<blockquote>
+<b>Because:</b>Otherwise, for some $\alpha\in \Lambda$  we have $C_ \alpha\cap D\neq\phi$  and
+ $C_ \alpha\cap E\neq\phi.$  Then $(C_ \alpha\cap E)\cup(C_ \alpha\cap E)$  is a disconnection for $C_ \alpha.$</blockquote>
+Also, $\exists \alpha\in \Lambda~~C_ \alpha\subseteq D$  and $\exists \beta\in \Lambda~~C_ \beta\subseteq E.$
+<blockquote>
+<b>Because:</b>Otherwise, either $D=\phi$  or $E=\phi.$</blockquote>
+
+<p></p>
+Then $C_ \alpha\cap C_ \beta = \phi(\contra).$
+<p></p>
+
+<u>Second part</u>: No, the intersection of two connected sets need not be connected. For example, 
+in the picture below $A$  and $B$  are two connected subsets of ${\mathbb R}^2$  (usual topology). 
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/conninter.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+The intersection (shown in red) is not connected.
+</font></b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2023.14a):</b>&nbsp;
+Prove that the set of real numbr ${\mathbb R}$ with lower limit
+topology is disconnected.[2]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+$(-\infty,0), ([0,\infty)$  provides one disconnection.
+</font></b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2023.14b):</b>&nbsp;
+Prove that a topological space containing a dense connected set
+is connected. [3]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+Let $(X,\tau)$  be a topological space with a dense subset $D$, which is connected. Shall show that $X$  is
+ connected.
+<p></p>
+Let, if possible, $X = U\cup V $ be a disconnection. 
+<p></p>
+Since $D$  is dense, and $U,V $ are non-empty open sets, hence $D\cap U\neq\phi$  and $D\cap V\neq\phi.$ 
+<p></p>
+Thus $D = (D\cap U)\cup (D\cap V)$  is a disconnection for $D (\contra\bc D$  is connected$).$
+</font></b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2023.17a):</b>&nbsp;
+If every continuous real valued function on a topological
+space $(X,\tau)$ takes on all values between any two values
+that it assumes, then prove that $(X,\tau)$ is connected. [2]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+Let, if possible, $(X,\tau)$  have a disconnection $X = U\cup V.$  
+Let $f:X\rightarrow{\mathbb R}$ be defined as $f(x)=\left\{\begin{array}{ll}1&\text{if }x\in U\\ 0&\text{if }x\in V\\\end{array}\right..$  
+<p></p>
+Since $U\cap V=\phi,$  this is well-defined. 
+<p></p>
+This function is continuous.
+<blockquote>
+<b>Because:</b>
+Let $A\subseteq{\mathbb R}$  be open. 
+<ul>
+
+<li>If $0\in A,$  but $1\not\in A,$  then $f ^{-1}(A)= V.$</li>
+
+<li>If $1\in A,$  but $0\not\in A,$  then $f ^{-1}(A)= U.$</li>
+
+<li>If $0,1\in A,$    then $f ^{-1}(A)= X.$</li>
+
+<li>If $0,1\not\in A,$   then $f ^{-1}(A)= \phi.$</li>
+
+</ul>
+Thus, in all the cases $f ^{-1}(A)\in \tau.$
+</blockquote>
+But $f$  does not take the value $\frac 12$  which is between $0$  and $1(\contra).$  
+</font></b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2021.16a):</b>&nbsp;
+If every real valued continuous function defined on a a
+topological space $X$ takes on every value between any two
+values that it assumes, then prove that $X$ is connected.[3]
+<p></p>
+<b>SOLUTION:</b>আগের অংকটাই৷ ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2023.17b):</b>&nbsp;
+If $A$ is a connected subset consisting of at least two
+points in a metric space $(X,d),$ then prove that $A$ is
+uncountable. [3]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+Let $a\neq b\in A.$  We define $f:A\rightarrow{\mathbb R}$  as $f(x) = d(a,x).$  
+<p></p>
+Then $f(a) = 0$  and $f(b) = d(a,b)&gt;0.$  
+<p></p>
+By intermediate value theorem, $f$  must take all values in $[0,d(a,b)].$  
+<p></p>
+Hence $\forall y\in [0,d(a,b)]~~\exists x\in A~~f(x) = y.$
+<p></p>
+Since $[0,d(a,b)]$  is uncountable, so is $A.$  
+</font></b> ///
+</p>
+
+<p>
+<b>EXAMPLE (2021.17a):</b>&nbsp;
+If $A$ is a connected subset of a metric space $(X,d)$
+consisting of at least two points, then prove that $A$ is uncountable.[3]
+<p></p>
+<b>SOLUTION:</b>আগের অংকটাই৷ ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2021.15a):</b>&nbsp;
+In a topological space $(X,\tau),$ $E$ is a connected
+subset of $X$ so that $E=A\cup B\cup C,$ where $A$
+and $B$ are separated and $C$ is connected. Show
+that $A \cup C$ is connected.[3]
+<p></p>
+<b>SOLUTION:</b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2021.15b):</b>&nbsp;
+Consider ${\mathbb R}$ endowed with the usual
+topology, $f:{\mathbb R}\rightarrow{\mathbb R}$ is any function such
+that $f({\mathbb Q})\subseteq{\mathbb R}\setminus{\mathbb Q}$
+and $f({\mathbb R}\setminus{\mathbb Q})\subseteq{\mathbb Q}.$ Show that $f$ is not a
+continuous function.[2]
+<p></p>
+<b>SOLUTION:</b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2021.16b):</b>&nbsp;
+Prove that a continuous mapping from a connected space to the
+real line having only rational values is constant.[2]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+Let, if possible, the function be not constant. Then $\exists a,b~~f(a)\neq f(b).$  
+<p></p>
+By intermediate value theorem, $f$  must take all values  between $f(a)$ and $f(b).$  Since ${\mathbb Q}^c$ 
+ is dense in ${\mathbb R},$  hence there must be at least one irrational between $f(a)$  and $f(b).$  
+But, by the given condition, $f $ cannot attain this value $(\contra).$
+</font></b> ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2021.17b):</b>&nbsp;
+Find all components of the set of rational numbers endowed with
+the subspace topology from the usual topology of ${\mathbb R}.$[2]
+<p></p>
+<b>SOLUTION:</b>
+<b><font color="#0000cc">
+The singletons $\{r\}$  for $r\in{\mathbb Q}$  are the components. Obviously each such singleton is a
+ connected subset of ${\mathbb Q}.$  
+<p></p>
+Let, if possible, there be a connected component with more than one element. Let $r&lt; s$  be in such a component,
+ $A.$  
+<p></p>
+Since ${\mathbb Q}^c$  is dense in ${\mathbb R},$  we have ${\mathbb Q}^c\cap[r,s]\neq\phi.$  
+<p></p>
+We pick some $a\in{\mathbb Q}^c\cap[r,s].$
+<p></p>
+Then $A\cap(-\infty,a)\cap{\mathbb Q}$  and $A\cap(a,\infty)\cap{\mathbb Q}$  provide a disconnection of $A(\contra).$
+</font></b>
+ ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2023.16b):</b>&nbsp;
+Prove that each component of a topological space is closed. [2]
+<p></p>
+<b>SOLUTION:</b><b><font color="#0000cc">
+
+<p></p>
+Ler $A$  be a connected component of a topological space $(X,\tau).$  
+<p></p>
+Then $A$  is the intersection of all its  clopen supersets.
+<blockquote>
+<b>Because:</b>
+Let $C$  be a clopen superset of $A.$  Let $p\in C^c.$   Then $C^c$  and
+ $C$  provide a disconnection for $A\cup\{p\}.$ 
+<p></p>
+Conversely, let $q$  be in the intersection of all clopen supersets of $A.$  Let, if possible, $A\cup\{q\}$ 
+ have a disconnection $(U,V).$  Since $A$  is connected, hence $A\subseteq U$  or $A\subseteq V.$  If $A\subseteq U,$ 
+ then $U$  is a clopen superset of $A,$  and hence $q\in U.$  So $V=\phi (\contra).$  Similarly, if $A\subseteq V,$ 
+ then $U=\phi (\contra).$
+</blockquote>
+ Since arbitrary intersectons of closed sets are closed,
+ hence $A$  must be closed.
+</font></b> ///
+</p>
+
+<p></p>
 
 <p>
 <b>EXAMPLE (2022.1d):</b>&nbsp;
