--- a/topo/topo1.html
+++ b/topo/topo1.html
@@ -255,6 +255,8 @@ collection $\{A_n~:~n\in{\mathbb N}\}\cup\{\phi\}$ is a topology on ${\mathbb N}
 <b>SOLUTION:</b>আগেরটার মতই৷<p></p>
 <div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.2a" class="fb-comments"></div> ///
 </p>
+
+<p></p>
 তোমার গুচ্ছে যেসব subset  নিয়েছ, তাদেরকে বলব একেকটা open subset.  
 <p></p>
 এই ভাষাটা তোমার অপরিচিত নয়৷ আমরা real analysis  বা metric space 
@@ -601,7 +603,7 @@ closed in $(X,\tau).$[3]
  $X,$  and hence is closed, as required.
 <p></p>
 
-<u>(If part)</u>  Let $G$ be closed in $(X,\tau).$  But since $G\se Y,$  hence   $G = G\cap Y.$  So $G$ 
+<u>(If part)</u>  Let $G$ be closed in $(X,\tau).$  But since $G\subseteq Y,$  hence   $G = G\cap Y.$  So $G$ 
  is closed in $(Y,\tau_Y), $ as well.
 </font></b>
 
@@ -839,7 +841,7 @@ Shall show that $A\cup A'$  is a closed set, <i>i.e.</i>, $(A\cup A')^c$  is ope
 
 <div class="box">$\forall x$</div> Take any $x\in (A\cup A')^c = A^c\cap (A')^c.$  
 <p></p>
-Since $x\not\in A',$  hence $\exists U\in\tau~~x\in U\mbox{ and }U\seminus\{x\}\cap A=\phi.$  
+Since $x\not\in A',$  hence $\exists U\in\tau~~x\in U\mbox{ and }U\setminus\{x\}\cap A=\phi.$  
 <p></p>
 Also, since $x\not\in A,$  hence $U\cap A = \phi.$
 <p></p>
@@ -942,25 +944,6 @@ Also $\{1\}$  is open in $(Y,\tau').$  But $f ^{-1} (\{1\}) = \{0\}$  is not ope
 <p></p>
 
 <p>
-<b>EXAMPLE (2023.8):</b>&nbsp;
-Let $(X,\tau)$ be the topological product of a family of
-topological spaces $\{(X_i,\tau_i)~:~i=1,2,...,n\}$
-and $p_i:X\rightarrow X_i$ denote the $i$-th projection map for
-all $i=1,2,...,n.$ Then prove that
-<p></p>
-(a) $p_i$ is an open map for all $i=1,2,...,n.$
-<p></p>
-(b) the product topology $\tau$ is the smallest topology
-on $X$ such that each projection map is continuous.
-<p></p>
-[2+3]
-<p></p>
-<b>SOLUTION:</b>
-<p></p>
-<div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2023.8" class="fb-comments"></div> ///
-</p>
-
-<p>
 <b>EXAMPLE (2023.1b):</b>&nbsp;
 Let $(X,\tau)$ be a topological space  and $A$ be a
 proper non-empty subset of $X$ such
@@ -985,7 +968,7 @@ is $X.$</li>
 The first two options are equivalent by definition, and they are also equivalent to the third
  option and the given condition.
 <p></p>
-The fourth option is false.  A counterexample is $A = {\mathbb Q}$  in $\X={\mathbb R}$  with usual topology. 
+The fourth option is false.  A counterexample is $A = {\mathbb Q}$  in $X={\mathbb R}$  with usual topology. 
 </font></b>
 
 <p></p>
@@ -1252,11 +1235,32 @@ Hence $A$  must be dense in $X.$
 <p></p>
 
 <p>
+<b>EXAMPLE (2022.2a):</b>&nbsp;
+Consider the set ${\mathbb N}$ of natural numbers and let $A_n =
+\{n,n+1,n+2,...\}.$ Show that the
+collection $\{A_n~:~n\in{\mathbb N}\}\cup\{\phi\}$ is a topology on ${\mathbb N}.$[3]
+<p></p>
+<b>SOLUTION:</b>এই অংকটা আগেই আলোচিত হয়েছে৷ এখানে
+আবার দিলাম, কারণ নীচের অংকটা এটার ভিত্তিতে দেওয়া হয়েছে৷ ///
+</p>
+
+<p></p>
+
+<p>
 <b>EXAMPLE (2022.2b):</b>&nbsp;
 Find the derived set of the set $\{1947\}$ in the above
 topological space.[2]
 <p></p>
 <b>SOLUTION:</b>
+<b><font color="#0000cc">
+Here the open sets are of the form $B_n = \{1,2,...,n\}$  for $n\in{\mathbb N}.$   
+<p></p>
+A point $p\in{\mathbb N}$  is in the derived set if and only if all open neighbourhoods of he $p$  intersect $A$ 
+ at some point other than $p.$  
+<p></p>
+So the required derived set is $\{1948,1949,...\} = A_{1948}.$
+</font></b>
+
 <p></p>
 <div data-numposts="5" data-width="" data-href="https://arnabc74.github.io/topo/topo1.html#2022.2b" class="fb-comments"></div> ///
 </p>
