--- a/topo/topo2.html
+++ b/topo/topo2.html
@@ -1060,6 +1060,25 @@ Taking finite itersections, the topology must contain all rectangles. Since thes
 <p></p>
 
 <p>
+<b>EXAMPLE (2023.8):</b>&nbsp;
+Let $(X,\tau)$ be the topological product of a family of
+topological spaces $\{(X_i,\tau_i)~:~i=1,2,...,n\}$
+and $p_i:X\rightarrow X_i$ denote the $i$-th projection map for
+all $i=1,2,...,n.$ Then prove that
+<p></p>
+(a) $p_i$ is an open map for all $i=1,2,...,n.$
+<p></p>
+(b) the product topology $\tau$ is the smallest topology
+on $X$ such that each projection map is continuous.
+<p></p>
+[2+3]
+<p></p>
+<b>SOLUTION:</b>আগের অংকটাই৷ ///
+</p>
+
+<p></p>
+
+<p>
 <b>EXAMPLE (2021.3):</b>&nbsp;
 Prove that a topological invariant is a metric invariant. Is the
 converse ture? Justify.[3+2]
