--- a/topo/topo2.html
+++ b/topo/topo2.html
@@ -348,7 +348,19 @@ subset of $X$ so that $E=A\cup B\cup C,$ where $A$
 and $B$ are separated and $C$ is connected. Show
 that $A \cup C$ is connected.[3]
 <p></p>
-<b>SOLUTION:</b> ///
+<b>SOLUTION:</b>এখানে $A$  আর $B$-কে separated  বলার মানে $A\cap \overline B = \overline A\cap B = \phi.$
+<b><font color="#0000cc">
+Let, if possible, $A\cup C$  be not connected. Let $(U,V)$  be a disconnection. Then either $C\subseteq U$  or
+ $C\subseteq V,$  since $C$  is connected. Wlog, let $C\subseteq V.$  Then  $(U,V\cup B)$  is a disconnection.
+ for $A\cup B\cup C.$  
+<blockquote>
+<b>Because:</b>
+$U$  is clopen in $A\cup C.$  Since $C\cap U=\phi,$  hence $U\subseteq A.$ 
+ Since $A,B$  are separated, hence  $B$  is separated from $U.$  So $U$  is clopen in $A\cup B\cup C.$ 
+ </blockquote>
+This gives a contradiction, since $A\cup B\cup C$  is connected. 
+</font></b>
+ ///
 </p>
 
 <p></p>
@@ -361,7 +373,12 @@ that $f({\mathbb Q})\subseteq{\mathbb R}\setminus{\mathbb Q}$
 and $f({\mathbb R}\setminus{\mathbb Q})\subseteq{\mathbb Q}.$ Show that $f$ is not a
 continuous function.[2]
 <p></p>
-<b>SOLUTION:</b> ///
+<b>SOLUTION:</b><b><font color="#0000cc">
+Let $a= f(0)$  and $b = f(\sqrt2).$  Then $a\neq b,$  since $a\not\in{\mathbb Q}$  and $b\in{\mathbb Q}.$  Let,
+ wlog, $a &lt; b.$  Then by the intermediate value theorem all the values in ${\mathbb Q}^c\cap[a,b]$  must be taken by $f(x)$ 
+ for $x\in[0,\sqrt2]\cap {\mathbb Q}.$  But this is impossible, since ${\mathbb Q}^c\cap[a,b]$  is uncountable, while ${\mathbb Q}\cap[0,\sqrt2]$ 
+ is countable.
+</font></b> ///
 </p>
 
 <p></p>
@@ -598,29 +615,6 @@ An uncountable set with cofinite topology is
 <b>SOLUTION:</b>
 আগেই দেখিয়েছি যে, $T_2$  নয়, এবং  first countable-ও নয়৷ 
  ///
-</p>
-
-<p></p>
-
-<p>
-<b>EXAMPLE (2023.1f):</b>&nbsp;
-Let $(X,\tau)$ be a co-countable space, where $X$ is an
-uncountable set. Then which of the following is true?
-
-<li>$(X,\tau)$ is a first countable space.</li>
-
-<li>$(X,\tau)$ is a Hausdorff space.</li>
-
-<li>There exists a convergent sequence in $X$ whose limit
-is not unique.</li>
-
-<li>A sequence $\{x_n\}$ in $X$ is convergent if and
-only if there is some positive integer $m$ such that for
-all $n\geq m$ $x_n=$ constant.</li>
-
-
-<p></p>
-<b>SOLUTION:</b> ///
 </p>
 
 <p></p>
@@ -1079,16 +1073,6 @@ on $X$ such that each projection map is continuous.
 <p></p>
 
 <p>
-<b>EXAMPLE (2021.3):</b>&nbsp;
-Prove that a topological invariant is a metric invariant. Is the
-converse ture? Justify.[3+2]
-<p></p>
-<b>SOLUTION:</b> ///
-</p>
-
-<p></p>
-
-<p>
 <b>EXAMPLE (2021.4):</b>&nbsp;
 Let $(X,d)$ be  a metric space and $A$ be a non-empty
 subset of $X.$ Prove that the
@@ -1242,6 +1226,24 @@ Hence $f\big(N_d(f ^{-1}(b),\delta) \big) \subseteq f(V).$
 But, since $f$  is an isometry, hence $f\big(N_d(f ^{-1}(b),\delta) \big)  = N_{d'}(f(b),\delta).$
 <p></p>
 Hence $N_{d'}(f(b),\delta)\subseteq f (V)$  proving that $f(V)\in\tau(d').$  
+</font></b>
+ ///
+</p>
+
+<p>
+<b>EXAMPLE (2021.3):</b>&nbsp;
+Prove that a topological invariant is a metric invariant. Is the
+converse true? Justify.[3+2]
+<p></p>
+<b>SOLUTION:</b>প্রথম অংশের উত্তর আগের অংকেই রয়েছে৷ দ্বিতীয় অংশের উত্তর হল--
+<b><font color="#0000cc">
+No, a metric invariant need not be a topological invariant. 
+<p></p>
+One example is boundedness. If $(X,d)$  and $(Y,d')$  are both metric spaces with a bijective isometry between
+ them, then $X$  i bounded if and only if $Y$  is bounded. 
+<p></p>
+But it is not a topological invariant. For example $(0,1)$  under usual topology is homeomorphic to ${\mathbb R}$  under
+ usual topology. But $(0,1)$  is bounded under the usual metric, while ${\mathbb R}$  is not. 
 </font></b>
  ///
 </p>
@@ -1417,6 +1419,29 @@ But $G$  contains no $x_n$  except those equal to $L.$  Hence we must have $\exi
  <a href="https://topospaces.subwiki.org/wiki/US_not_implies_Hausdorff">এখানে</a>  একটা 
 counterexample  দেওয়া আছে, যেটা ভুল৷
  ///
+</p>
+
+<p></p>
+
+<p>
+<b>EXAMPLE (2023.1f):</b>&nbsp;
+Let $(X,\tau)$ be a co-countable space, where $X$ is an
+uncountable set. Then which of the following is true?
+
+<li>$(X,\tau)$ is a first countable space.</li>
+
+<li>$(X,\tau)$ is a Hausdorff space.</li>
+
+<li>There exists a convergent sequence in $X$ whose limit
+is not unique.</li>
+
+<li>A sequence $\{x_n\}$ in $X$ is convergent if and
+only if there is some positive integer $m$ such that for
+all $n\geq m$ $x_n=$ constant.</li>
+
+
+<p></p>
+<b>SOLUTION:</b>খালি শেষেরটাই ঠিক৷ ///
 </p>
 
 <p></p>
