--- a/topo/topo3.html
+++ b/topo/topo3.html
@@ -582,7 +582,7 @@ is any metric space. Then which of the following is true?
 
 
 <p></p>
-<b>SOLUTION:</b>প্রথমটাই সঠিক৷ করণটা এইরকম--<b><font color="#0000cc">
+<b>SOLUTION:</b>প্রথমটাই সঠিক৷ কারণটা এইরকম--<b><font color="#0000cc">
 Enough to show that $f$  is a closed map, because being bijective, it is then also open, ie, $f ^{-1}$  is continuous.
 <p></p>
 Let $A\subseteq X $ be closed. Since $X$  is compact, hence $A$  is also compact.
@@ -600,15 +600,22 @@ Since $Y$  is a metric space, hence $Y$  is $T_2.$  We know that $compact$  subs
 Let $(X,\tau_1)$ be a $T_2$ space and $(X,\tau_2)$
 be compact such that $\tau_1\subseteq \tau_2.$ Prove that $\tau_1=\tau_2.$[2]
 <p></p>
-<b>SOLUTION:</b> ///
+<b>SOLUTION:</b>এটা আসলে আগের সমাধানটার যুক্তিতেই ঘায়েল হবে৷ খালি যাপারটাকে এইভাবে সাজিয়ে নাও৷ 
+$f:(X,\tau_2)\rightarrow(X,\tau_1)$  নিচ্ছি $f(x)=x.$  তবে $\tau_1\subseteq \tau_2$  হওয়ায় $f$  
+একটা continuous  function  হবে৷ আগের অংকের যুক্তিতে $f$  একটা homeomorphism.  
+তাই দুদিকের topology  এক হতে বাধ্য৷ আগের অংকে অবশ্য metric space  নিয়ে কজ হচ্ছিল৷ কিন্তু 
+সমাধানে খালি $f$-এর domain-টা যে $T_2$, এটুকুই লেগেছে৷ 
+ ///
 </p>
+
+<p></p>
 
 <p>
 <b>EXAMPLE (2023.15a):</b>&nbsp;
 Prove that a real valued continuous function $f$ on a
 compact set $(X,\tau)$ attains its greatest value. [2]
 <p></p>
-<b>SOLUTION:</b> ///
+<b>SOLUTION:</b>Standard result. ///
 </p>
 
 <p></p>
@@ -619,7 +626,7 @@ Prove that every closed and bounded interval of the real
 line${\mathbb R}$ (<i>i.e.</i>, ${\mathbb R}$ with the usual topology) is
 compact. [3]
 <p></p>
-<b>SOLUTION:</b> ///
+<b>SOLUTION:</b>Standard result. ///
 </p>
 
 <p></p>
