--- a/topo/topo3.html
+++ b/topo/topo3.html
@@ -158,7 +158,7 @@ name="Compact">Compact</a></h1>
 
 <p>
 <b>EXAMPLE (2021.1h):</b>&nbsp;
-If $\tau = \{\phi, \{a\},\{\a,b\},X\}$ is a topology on $X =
+If $\tau = \{\phi, \{a\},\{a,b\},X\}$ is a topology on $X =
 \{a,b,c\},$ then $(X,\tau)$ is
 
 <li>compact and Hausdorff.</li>
@@ -317,8 +317,8 @@ Then which of the following is true?
 <p></p>
 <b>SOLUTION:</b>Continuous, কারণ এর গ্রাফ আঁকতে হলে পেন তুলতে হয় একমাত্র
  domain-এ ফাঁক আছে যেখানে, সেখানে৷ Open  নয়, কারণ
- $(2.1,2.9)$  এখানে $open,$  কিন্তু এর image  হল $\{2\},$ 
- যেক্ষা মোটেই ${\mathbb R}$-এর মধ্যে open  নয়৷ ///
+ $(2.1,2.9)$  এখানে open,  কিন্তু এর image  হল $\{2\},$ 
+ যেটা মোটেই ${\mathbb R}$-এর মধ্যে open  নয়৷ ///
 </p>
 
 <p></p>
@@ -385,7 +385,7 @@ For $a,b\in X$  we shall say $a\sim b$  if and only if there are no disjoint clo
  $a\in A$  and $b\in B.$  
 <p></p>
 Clearly, this relation is reflexive and symmetric. Also it is transitive.
-<blockquote>
+<blockquote class="scrpt">
 <b>Because:</b>
 Let $a\sim b$  and $b\sim c.$  Let, if possible, $a\not\sim c.$
 <p></p>
@@ -419,12 +419,18 @@ Hence $B_1\cap B_2\in \beta.$  So $\beta$  is a basis.
 <p></p>
 
 <u>Second part</u>:
-Since the elements of $\beta$  are all complements of closed sets (wrt $\tau$), hence $bb\subseteq \tau.$  
+Since the elements of $\beta$  are all complements of closed sets (wrt $\tau$), hence $\beta\subseteq \tau.$  
 <p></p>
 So $\tau'\subseteq \tau.$
 <p></p>
 
 <u>Third part</u>:
+<p></p>
+Let $\{U_ \alpha~:~ \alpha\in \Lambda\}\subseteq \tau'$  be a cover for $X.$  Pick some
+ $U$  in this cover (possible since this cover cannot be empty, as $X\neq\phi$). 
+Then $U^c$  is compact in $(X,\tau)$   and has $\{U_ \alpha~:~ \alpha\in \Lambda\}\setminus\{U\}$  as an open
+ cover (since $\tau'\subseteq\tau$). So we can extract a finite subcover $\{U_1,...,U_n\}$  for $U^c.$  Then $\{U_1,...,U_n\}\cup \{U\}$ 
+ is a finite subcover for $X$  in $(X,\tau'),$  completing the proof.
 </font></b> ///
 </p>
 
@@ -482,7 +488,7 @@ Let, if possible, $\cap _{\alpha\in \Lambda} F_ \alpha = \phi.$  Then, de Morgan
  So $\{F_ \alpha^c~:~ \alpha\in \Lambda\}$  is an open cover of $X.$
 <p></p>
 Since $X$  is compact, there is a finite subcover, $\{F_{\alpha_1}^c,...,F_{\alpha_n}^c\}$  ie, 
-$\cup _{i=1}^n F_ \alpha_i^c = X,$  ie, $\cap _{i=1}^n F_ \alpha_i = \phi (\contra$  FIP$).$
+$\cup _{i=1}^n F_ {\alpha_i}^c = X,$  ie, $\cap _{i=1}^n F_ {\alpha_i} = \phi (\contra$  FIP$).$
 <p></p>
 Conversely, if every family with FIP has non-empty intersection, then we shall show that $X$  must be compact.
 <p></p>
@@ -508,6 +514,8 @@ Shall show that $K$  is closed, ie, $K^c$  is open, ie
 <p></p>
 
 <div class="box">Target</div>$\forall x\in K^c~~\exists U\in \tau~~x\in U\subseteq K^c.$
+<p></p>
+
 <div class="box">$\forall x$</div>Take any $x\in K^c.$  
 <p></p>
 Then $\forall y\in K~~x\neq y.$
@@ -645,7 +653,7 @@ The statement is false.
 Let $\tau = \big\{~\{-\infty\}\cup{\mathbb N},~\{\infty\}\cup{\mathbb N},~\{-\infty,\infty\}\cup{\mathbb N}~\big\}\cup {\mathscr P}({\mathbb N}).$
 <p></p>
 Then $\tau$  is a topology on $X.$  
-<blockquote>
+<blockquote class="scrpt">
 <b>Because:</b>
 Clearly, $\phi, X\in\tau.$
 <p></p>
