--- a/linalg/gjrref.html
+++ b/linalg/gjrref.html
@@ -5,7 +5,11 @@
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
 <style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
+
 <script src="../tools/jquery-1.10.2.min.js"></script>
+<script src="rref.js"></script>
 
 <script>
 aha = function(code) {
@@ -95,6 +99,11 @@ body {
 .scrpt {
   border-left: 5px solid black;
 }
+
+.box {
+  border: 2px solid black;
+  display: inline-block;
+}
 </style>
 <script>
 window.onscroll = function() {myFunction()};
@@ -127,18 +136,61 @@ function myFunction() {
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
 <script src="../tools/rglWebGL.js"></script>
-</head>
-<body>
-<div class="sticky" id="topholder"> </div>
+</head><body
+onLoad="loadMenu()"><div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#RREF  বার করা">RREF  বার করা</a>
+<a href="#GJ for RREF">GJ for RREF</a>
 </li>
 </ul>
-<hr/><h1><a
-name="RREF  বার করা">RREF  বার করা</a></h1>
+<hr/>
+<h1><a
+name="GJ for RREF">GJ for RREF</a></h1>
+
+<hr>
+
+<div id="shuru">
+এখানে আমরা দেখব কীভাবে Gauss-Jordan elimination  দিয়ে একটা matrix-এর Reduced Row Echelon Form (RREF)  
+বার করে৷ 
+<p>তুমি দুভাবে শুরু করতে পারো৷ আমার দেওয়া কিছু উদাহরণ দিয়ে৷ অথবা তোমার নিজের বানানো কিছু উদাহরণ দিয়ে৷ </p>
+আমার দেওয়া উদাহরণ: <select id="whichexm"></select>
+<p/> তোমার নিজের বানানো  matrix: <input type=button value="My own example"
+onclick="showUI('shuru',false);showUI('custom',true)" />
+</div>
+<div style="display:none" id="custom">
+<p>
+ কতগুলো row  চাও: <input type='text' id="nrow"/>
+ কতগুলো  column  চাও: <input type='text' id="ncol"/>
+</p><p>
+Row  অর column-এর সংখ্যা বলা হয়ে গেলে ওই সাইজের একটা ফাঁকা matrix  বানাও:  <input
+ type="button" value="Create table"
+onclick="createTable()" />
+</p><p>
+ এবার ফাঁকা matrix-টায় ইচ্ছা মত সংখ্যা ভরো (পূর্ণ সংখ্যা বা ভগ্নাংশ)৷
+ ভগ্নাংশ লিখতে চাইলে 1/2  বা -11/3-এর মত  লেখো৷ যদি অত লিখতে না ইচ্ছে করে,
+ তবে এই button-টা টিপতে পারো, তবে কম্পিউটারটাই যা খুশি সংখ্যা ঢুকিয়ে দেবে:   <input
+ type="button" id="rand"
+ value="Fill table randomly"
+onclick="randomise()" />
+<p/>পুরো matrix-টা ভরে গেলে এবার এই button-টা টেপো:  <input type="button" id="read" value="Read"
+onclick="loadTable()" />
+</p></div>
+  <div id="tbl"></div>
+<div id="op"  style="display:none">
+ এখন থেকে তোমার কাজ খালি বারবার এই button-টা টিপে যাওয়া৷ প্রত্যেকবার টেপার পরে একটা করে
+ ধাপ দেখানো হবে৷
+  <input type="button" id="step" value="Step" onclick="dostep()" />
+<table width=100% valign=top border=0 cellspacing=20><tr><td width=50% rowspan=2>
+<b>Matrix:</b><p><div id="tblout">
+</div></td><td width=50%><u> কী নিয়ম লাগাতে হবে--</u><p><div id="rule">
+  </div></td></tr>
+<tr><td><u> আমাদের বেলায়--</u><p>
+<div id="exm">
+</div></td></tr></table>
+</div>
+
 <hr/>
 <table width="100%" border="0">
 <tr>
@@ -146,6 +198,4 @@ name="RREF  বার করা">RREF  বার করা</a></h1>
 <td align="right"/>
 </tr>
 </table>
-<hr/>
-</body>
-</html>
+<hr/></body></html>
