--- a/linalg/gjrref.html
+++ b/linalg/gjrref.html
@@ -155,7 +155,7 @@ name="GJ for RREF">GJ for RREF</a></h1>
 এখানে আমরা দেখব কীভাবে Gauss-Jordan elimination  দিয়ে একটা matrix-এর Reduced Row Echelon Form (RREF)  
 বার করে৷ 
 <p>তুমি দুভাবে শুরু করতে পারো৷ আমার দেওয়া কিছু উদাহরণ দিয়ে৷ অথবা তোমার নিজের বানানো কিছু উদাহরণ দিয়ে৷ </p>
-আমার দেওয়া উদাহরণ: <select id="whichexm"></select>
+আমার দেওয়া উদাহরণ: <select id="whichexm"  onchange="exm()"></select>
 <p/> তোমার নিজের বানানো  matrix: <input type=button value="My own example"
 onclick="showUI('shuru',false);showUI('custom',true)" />
 </div>
