--- a/linalg/gjrref.html
+++ b/linalg/gjrref.html
@@ -142,12 +142,12 @@ onLoad="loadMenu()"><div class="sticky" id="topholder"> </div>
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#GJ for RREF">GJ for RREF</a>
+<a href="#Reduced Row Echelon Form বার করা">Reduced Row Echelon Form বার করা</a>
 </li>
 </ul>
 <hr/>
 <h1><a
-name="GJ for RREF">GJ for RREF</a></h1>
+name="Reduced Row Echelon Form বার করা">Reduced Row Echelon Form বার করা</a></h1>
 
 <hr>
 
@@ -156,7 +156,7 @@ name="GJ for RREF">GJ for RREF</a></h1>
 বার করে৷ 
 <p>তুমি দুভাবে শুরু করতে পারো৷ আমার দেওয়া কিছু উদাহরণ দিয়ে৷ অথবা তোমার নিজের বানানো কিছু উদাহরণ দিয়ে৷ </p>
 আমার দেওয়া উদাহরণ: <select id="whichexm"  onchange="exm()"></select>
-<p/> তোমার নিজের বানানো  matrix: <input type=button value="My own example"
+<p/> তোমার নিজের বানানো  matrix: <input type=button value="Your own example"
 onclick="showUI('shuru',false);showUI('custom',true)" />
 </div>
 <div style="display:none" id="custom">
