--- a/video/Ranim.html
+++ b/video/Ranim.html
@@ -150,6 +150,13 @@ name="R program for making 2.5D parallax animation">R program for making 2.5D pa
 All the functions are provided in
 this <a href="parAnim.r">single R file</a>. The example in it
 uses <a href="vase.png">this image</a>.
+<p></p>
+The code is written in a somewhat dense
+way. 
+<a href="https://www.youtube.com/playlist?list=PLx--gUxue3Z9uTGygFZKHXomtdURZhmlS">
+This Youtube playlist</a>
+explains the concepts underlying the code.
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
